k8s-deploy-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    svcLabel: b
    target: istio
spec:
  replicas: 2
  selector:
    matchLabels:
      svcLabel: b
  template:
    metadata:
      labels:
        svcLabel: b
        version: v1
    spec:
      containers:
      - name: svc-b
        image: su225/istio-test:learning
        imagePullPolicy: Never
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    svcLabel: b
    target: istio
spec:
  selector:
    svcLabel: b
    version: v1
  ports:
  - protocol: TCP
    port: 8888
  type: ClusterIP
