k8s-deploy-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  labels:
    svcLabel: c
    target: istio
spec:
  replicas: 1
  selector:
    matchLabels:
      svcLabel: c
  template:
    metadata:
      labels:
        svcLabel: c
        version: v1
    spec:
      containers:
      - name: svc-c
        image: su225/istio-test:learning
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    svcLabel: c
    target: istio
spec:
  selector:
    svcLabel: c
    version: v1
  ports:
  - protocol: TCP
    port: 8888
  type: ClusterIP
