service-b-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-b
spec:
  gateways:
  - service-b-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: service-b
        port:
          number: 8888

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-b-gateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: service-b
      protocol: HTTP
    hosts:
    - "*"
